--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "6mx-react-ts-cli",
+  "name": "react-ts-app",
   "version": "1.0.2",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -56,8 +56,6 @@
   },
   "lint-staged": {
     "*.{js,css,md,ts,tsx}": "prettier --write"
-  },
-  "bin": {
-    "6mx-react-ts-cli": "bin/index.js"
   }
+
 }
