--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "commander": "^8.1.0",
     "download-git-repo": "^3.0.2",
     "inquirer": "^8.1.2",
+    "jira-dev-tool": "^1.7.61",
     "ora": "^5.4.1",
     "qs": "^6.10.1",
     "react": "^17.0.2",
@@ -27,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install",
-    "json-server": "json-server __json_server_mock__/db.json --watch --port 3001"
+    "json-server": "json-server __json_server_mock__/db.json --watch --port 3001 --middlewares ./__json_server_mock__/middleware.js"
   },
   "eslintConfig": {
     "extends": [
@@ -59,5 +60,8 @@
   },
   "lint-staged": {
     "*.{js,css,md,ts,tsx}": "prettier --write"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
