--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "dayjs": "^1.10.6",
     "download-git-repo": "^3.0.2",
     "inquirer": "^8.1.2",
-    "jira-dev-tool": "^1.7.61",
+    "jira-dev-tool": "^1.6.59",
     "ora": "^5.4.1",
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.19.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
