--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@welldone-software/why-did-you-render": "^6.2.0",
     "antd": "^4.16.10",
     "chalk": "^4.1.2",
     "commander": "^8.1.0",
