--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@craco/craco": "^6.2.0",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -28,6 +29,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-query": "^3.19.2",
+    "react-redux": "^7.2.6",
     "react-router": "^6.0.0-beta.1",
     "react-router-dom": "^6.0.0-beta.1",
     "react-scripts": "4.0.3",
